splitted controller and added front and backend validator

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -11,17 +11,44 @@
     </style>
 </head>
 <body>
+    <nav th:fragment="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <a class="navbar-brand" href="/" th:href="@{/}">
+            <img src="/images/logo_sm.png" width="30" height="30">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <form th:action="@{/search/study}" class="form-inline" method="get">
+                        <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="Search studies..." aria-label="Search" />
+                    </form>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/login}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/sign-up}">Register</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <div class="py-5 text-center">
             <h2>Register</h2>
         </div>
         <div class="row justify-content-center">
             <form class="needs-validation col-sm-6" action="#"
-                  th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
+                  th:action="@{/account/sign-up}" th:object="${signUpForm}" method="post" novalidate>
                 <div class="form-group">
                     <label for="nickname">Nickname</label>
                     <input id="nickname" type="text" th:field="*{nickname}" class="form-control"
-                           placeholder="whiteship" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
+                           placeholder="nickname" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
                     <small id="nicknameHelp" class="form-text text-muted">
                         Hint : Please input without space, but characters and numbers sized between 3 and 20. You can change after registration.
                     </small>
@@ -34,7 +61,7 @@
                     <input id="email" type="email" th:field="*{email}" class="form-control"
                            placeholder="your@email.com" aria-describedby="emailHelp" required>
                     <small id="emailHelp" class="form-text text-muted">
-                        Your email will keep in secret.
+                        Hint : Your email will keep in secret.
                     </small>
                     <small class="invalid-feedback">Please input your E-mail.</small>
                     <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
@@ -43,9 +70,9 @@
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input id="password" type="password" th:field="*{password}" class="form-control"
-                           aria-describedby="passwordHelp" required minlength="8" maxlength="50">
+                           aria-describedby="passwordHelp" required minlength="4" maxlength="50">
                     <small id="passwordHelp" class="form-text text-muted">
-                        Hint : Please input without space, but characters, special ones and numbers sized between 8 and 50.
+                        Hint : Please input without space, but characters, special ones and numbers sized between 4 and 50.
                     </small>
                     <small class="invalid-feedback">Please input your password.</small>
                     <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
@@ -64,5 +91,26 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script type="application/javascript" th:fragment="form-validation">
+        (function () {
+            'use strict';
+
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+
+                // Loop over them and prevent submission
+                Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+            }, false)
+        }())
+    </script>
 </body>
 </html>
