added checked email feature

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -5,12 +5,12 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
-        .cotainer {
+        .container {
             max-width: 100%;
         }
     </style>
 </head>
-<body>
+<body class="bg-light">
     <nav th:fragment="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="/" th:href="@{/}">
             <img src="/images/logo_sm.png" width="30" height="30">
