--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body class="bg-light">
-    <nav th:fragment="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="/" th:href="@{/}">
             <img src="/images/logo_sm.png" width="30" height="30">
         </a>
@@ -87,6 +87,12 @@
                 </div>
             </form>
         </div>
+        <footer>
+            <div class="row justify-content-center">
+                <img class="mb-2" src="/images/logo_long.jpg" alt="" width="100">
+                <small class="d-block mb-3 text-muted">&copy; 2020</small>
+            </div>
+        </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
