--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <body class="bg-light">
     <div th:replace="fragment/common :: main-nav"></div>
     <div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
-        Please confirm of your account on the <a href="#" th:href="@{/account/check-email}" class="alert-link">email</a> provided!!!
+        Please confirm of your account on the <a href="#" th:href="@{/account/recheck-email}" class="alert-link">email</a> provided!!!
     </div>
     <div class="container">
         <div class="py-5 text-center">
