--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -66,7 +66,7 @@
                         <a class="dropdown-item" >Meeting</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#" th:href="@{'/account/profile/settings/'}">Setting</a>
-                        <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/account/logout}" method="post">
+                        <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
                             <button class="dropdown-item" type="submit">Logout</button>
                         </form>
                     </div>
@@ -81,4 +81,26 @@
             <small class="d-block mb-3 text-muted">&copy; 2020</small>
         </div>
     </footer>
+
+    <script type="application/javascript" th:fragment="form-validation">
+        (function () {
+            'use strict';
+
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+
+                // Loop over them and prevent submission
+                Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+            }, false)
+        }())
+    </script>
 </html>
