fixed updated registering date

--- a/src/main/resources/templates/account/checked-email.html
+++ b/src/main/resources/templates/account/checked-email.html
@@ -21,7 +21,7 @@
             <p class="lead">Confirm of the email</p>
             <h2>
                 Completely has been checked the email. <br />
-                <span th:text="${numberOfUser}">10</span>th's member,
+                <span th:text="${numberOfUser}">10</span><small>th</small> member,
                 <span th:text="${nickname}">Test</span>, thank you for signing up.
             </h2>
             <small class="text-info">Please sign-in using email or nickname / password.</small>
