added profile form with model

--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -75,6 +75,15 @@
         </div>
     </nav>
 
+    <div th:fragment="settings-menu (currentMenu)" class="list-group">
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active" href="#" th:href="@{/settings/profile}">Profile</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active" href="#" th:href="@{/settings/password}">Password</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'notifications'}? active" href="#" th:href="@{/settings/notifications}">Notification</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active" href="#" th:href="@{/settings/tags}">Topic</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active" href="#" th:href="@{/settings/zones}">Active Area</a>
+        <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active" href="#" th:href="@{/settings/account}">Account</a>
+    </div>
+
     <footer th:fragment="footer">
         <div class="row justify-content-center">
             <img class="mb-2" src="/images/logo_long.jpg" alt="" width="100">
