--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -10,76 +10,195 @@
     <title>Profile</title>
 </th:block>
 <body class="bg-light">
-<div th:replace="fragment/common :: main-nav"></div>
-<div class="container">
-    <div class="row mt-5 justify-content-center">
-        <div class="col-2">
-            <div th:replace="fragment/common :: settings-menu(currentMenu='profile')"></div>
-        </div>
-        <div class="col-8">
-            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
-                <span th:text="${message}">Message</span>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+    <div th:replace="fragment/common :: main-nav"></div>
+    <div class="container">
+        <div class="row mt-5 justify-content-center">
+            <div class="col-2">
+                <div th:replace="fragment/common :: settings-menu(currentMenu='profile')"></div>
             </div>
-            <div class="row">
-                <h2 class="col-sm-12" th:text="${account.nickname}">test</h2>
-            </div>
-            <div class="row mt-3">
-                <form class="col-sm-6" action="#"
-                      th:action="@{/settings/profile}" th:object="${profile}" method="post" novalidate>
-                    <div class="form-group">
-                        <label for="bio">Introduction</label>
-                        <input id="bio" type="text" th:field="*{bio}" class="form-control"
-                               placeholder="Tell me about yourself with 1 line." aria-describedby="bioHelp" required>
-                        <small id="bioHelp" class="form-text text-muted">
-                            Please input by 35 letters.
-                        </small>
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
-                            It's longer than expected.
-                        </small>
-                    </div>
+            <div class="col-8">
+                <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+                    <span th:text="${message}">Message</span>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="row">
+                    <h2 class="col-sm-12" th:text="${account.nickname}">test</h2>
+                </div>
+                <div class="row mt-3">
+                    <form class="col-sm-6" action="#"
+                          th:action="@{/settings/profile}" th:object="${profile}" method="post" novalidate>
+                        <div class="form-group">
+                            <label for="bio">Introduction</label>
+                            <input id="bio" type="text" th:field="*{bio}" class="form-control"
+                                   placeholder="Tell me about yourself with 1 line." aria-describedby="bioHelp" required>
+                            <small id="bioHelp" class="form-text text-muted">
+                                Please input by 35 letters.
+                            </small>
+                            <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
+                                It's longer than expected.
+                            </small>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="url">Link</label>
-                        <input id="url" type="url" th:field="*{url}" class="form-control"
-                               placeholder="http://meeting.com" aria-describedby="urlHelp" required>
-                        <small id="urlHelp" class="form-text text-muted">
-                            Please add any sites about you like blog, youtube or portfolio sites
-                        </small>
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
-                            Please follow a correct form of URL.
-                        </small>
-                    </div>
+                        <div class="form-group">
+                            <label for="url">Link</label>
+                            <input id="url" type="url" th:field="*{url}" class="form-control"
+                                   placeholder="http://meeting.com" aria-describedby="urlHelp" required>
+                            <small id="urlHelp" class="form-text text-muted">
+                                Please add any sites about you like blog, youtube or portfolio sites
+                            </small>
+                            <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
+                                Please follow a correct form of URL.
+                            </small>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="company">Job</label>
-                        <input id="company" type="text" th:field="*{occupation}" class="form-control"
-                               placeholder="What do you do?" aria-describedby="occupationHelp" required>
-                        <small id="occupationHelp" class="form-text text-muted">
-                            Ex) Developer? Manager? Student?
-                        </small>
-                    </div>
+                        <div class="form-group">
+                            <label for="company">Job</label>
+                            <input id="company" type="text" th:field="*{occupation}" class="form-control"
+                                   placeholder="What do you do?" aria-describedby="occupationHelp" required>
+                            <small id="occupationHelp" class="form-text text-muted">
+                                Ex) Developer? Manager? Student?
+                            </small>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="location">Active Area</label>
-                        <input id="location" type="text" th:field="*{location}" class="form-control"
-                               placeholder="Toronto, ON, Canada"
-                               aria-describedby="locationdHelp" required>
-                        <small id="locationdHelp" class="form-text text-muted">
-                            Please write your active area.
-                        </small>
-                    </div>
+                        <div class="form-group">
+                            <label for="location">Active Area</label>
+                            <input id="location" type="text" th:field="*{location}" class="form-control"
+                                   placeholder="Toronto, ON, Canada"
+                                   aria-describedby="locationdHelp" required>
+                            <small id="locationdHelp" class="form-text text-muted">
+                                Please write your active area.
+                            </small>
+                        </div>
 
-                    <div class="form-group">
-                        <button class="btn btn-primary btn-block" type="submit"
-                                aria-describedby="submitHelp">Edit</button>
+                        <div class="form-group">
+                            <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
+                        </div>
+
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block" type="submit"
+                                    aria-describedby="submitHelp">Edit</button>
+                        </div>
+                    </form>
+                    <div class="col-sm-6">
+                        <div class="card text-center">
+                            <div class="card-header">
+                                Profile Image
+                            </div>
+                            <div id="current-profile-image" class="mt-3">
+                                <svg th:if="${#strings.isEmpty(profile.profileImage)}" class="rounded"
+                                     th:data-jdenticon-value="${account.nickname}" width="125" height="125"></svg>
+                                <img th:if="${!#strings.isEmpty(profile.profileImage)}" class="rounded"
+                                     th:src="${profile.profileImage}"
+                                     width="125" height="125" alt="name" th:alt="${account.nickname}"/>
+                            </div>
+                            <div id="new-profile-image" class="mt-3"></div>
+                            <div class="card-body">
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" id="profile-image-file">
+                                    <label class="custom-file-label" for="profile-image-file">Update Profile Image</label>
+                                </div>
+                                <div id="new-profile-image-control" class="mt-3">
+                                    <button class="btn btn-outline-primary btn-block" id="cut-button">Cut</button>
+                                    <button class="btn btn-outline-success btn-block" id="confirm-button">Confirm</button>
+                                    <button class="btn btn-outline-warning btn-block" id="reset-button">Cancel</button>
+                                </div>
+                                <div id="cropped-new-profile-image" class="mt-3"></div>
+                            </div>
+                        </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <link  href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet">
+    <script src="/node_modules/cropper/dist/cropper.min.js"></script>
+    <script src="/node_modules/jquery-cropper/dist/jquery-cropper.min.js"></script>
+    <script type="application/javascript">
+        $(function() {
+            cropper = '';
+            let $confirmBtn = $("#confirm-button");
+            let $resetBtn = $("#reset-button");
+            let $cutBtn = $("#cut-button");
+            let $newProfileImage = $("#new-profile-image");
+            let $currentProfileImage = $("#current-profile-image");
+            let $resultImage = $("#cropped-new-profile-image");
+            let $profileImage = $("#profileImage");
+
+            //hide the button until selecting a file
+            $newProfileImage.hide();
+            $cutBtn.hide();
+            $resetBtn.hide();
+            $confirmBtn.hide();
+
+            $("#profile-image-file").change(function(e) {
+                if (e.target.files.length === 1) {
+                    const reader = new FileReader();
+                    reader.onload = e => {
+                        if (e.target.result) {
+                            if (!e.target.result.startsWith("data:image")) {
+                                alert("Please choose an image file.");
+                                return;
+                            }
+
+                            let img = document.createElement("img");
+                            img.id = 'new-profile';
+                            img.src = e.target.result;
+                            img.setAttribute('width', '100%');
+
+                            $newProfileImage.html(img);
+                            $newProfileImage.show();
+                            $currentProfileImage.hide();
+
+                            let $newImage = $(img);
+                            $newImage.cropper({aspectRatio: 1});
+                            cropper = $newImage.data('cropper');
+
+                            $cutBtn.show();
+                            $confirmBtn.hide();
+                            $resetBtn.show();
+                        }
+                    };
+
+                    reader.readAsDataURL(e.target.files[0]);
+                }
+            });
+
+            $resetBtn.click(function() {
+                $currentProfileImage.show();
+                $newProfileImage.hide();
+                $resultImage.hide();
+                $resetBtn.hide();
+                $cutBtn.hide();
+                $confirmBtn.hide();
+                $profileImage.val('');
+            });
+
+            $cutBtn.click(function () {
+                let dataUrl = cropper.getCroppedCanvas().toDataURL();
+
+                if (dataUrl.length > 1000 * 1024) {
+                    alert("Please choose the file with the size less than 1024000. Current size is " + dataUrl.length);
+                    return;
+                }
+
+                let newImage = document.createElement("img");
+                newImage.id = "cropped-new-profile-image";
+                newImage.src = dataUrl;
+                newImage.width = 125;
+                $resultImage.html(newImage);
+                $resultImage.show();
+                $confirmBtn.show();
+
+                $confirmBtn.click(function () {
+                    $newProfileImage.html(newImage);
+                    $cutBtn.hide();
+                    $confirmBtn.hide();
+                    $profileImage.val(dataUrl);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
