--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
-                <div th:replace="fragment/common :: settings-menu(currentMenu='profile')"></div>
+                <div th:replace="fragment/common :: settings-menu(currentMenu='password')"></div>
             </div>
             <div class="col-8">
                 <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
