implemented updaing nickname and refactoring url constants

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -53,7 +53,7 @@
                     <button class="btn btn-primary btn-block" type="submit"
                             aria-describedby="submitHelp">Sign Up</button>
                     <small id="submitHelp" class="form-text text-muted">
-                        <a href="#">Email</a> : Any concert, email to us.
+                        <a href="#">Email</a> : Any concern, email to us.
                     </small>
                 </div>
             </form>
