--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-8">
                 <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
-                    <span th:text="${message}">Message</span>
+                    <span th:text="${message}">Complete</span>
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
