--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -38,7 +38,7 @@
 
             <ul class="navbar-nav justify-content-end">
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a class="nav-link" th:href="@{/login}">Login</a>
+                    <a class="nav-link" th:href="@{/account/login}">Login</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/account/sign-up}">Register</a>
@@ -68,8 +68,8 @@
                         <a class="dropdown-item" th:href="@{'/account/profile/' + ${#authentication.name}}">Profile</a>
                         <a class="dropdown-item" >Meeting</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#" th:href="@{'/account/profile/settings/'}">Setting</a>
-                        <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
+                        <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">Setting</a>
+                        <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/account/logout}" method="post">
                             <button class="dropdown-item" type="submit">Logout</button>
                         </form>
                     </div>
